<resources>
    <string name="app_name">Morsal POS</string>
    <string name="home">HOME</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">Sign in</string>
    <string name="title_activity_sign_up">Sign up</string>
    <string name="title_activity_reset_password">Reset Password</string>
    <string name="title_activity_topup">TOP-UP</string>
    <string name="title_activity_balance">Balance Inquiry</string>
    <string name="title_activity_bill_payment">Bill Payment</string>
    <string name="title_activity_bill_inquiry">Bill Inquiry</string>
    <string name="title_activity_home">Home</string>
    <string name="title_activity_account">Account</string>
    <string name="title_activity_transfer">Transfer</string>
    <string name="title_activity_transaction">Transactions</string>
    <string name="title_activity_e15">E-15 Payment</string>
    <string name="title_activity_egovernment">E-Government</string>
    <string name="title_activity_card">My Cards</string>
    <string name="title_activity_add_card">Add Card</string>
    <string name="title_activity_change_ipin">Change iPIN</string>
    <string name="title_activity_change_password">Change Password</string>
    <string name="title_activity_suspend_card">Suspend Card</string>
    <string name="title_activity_purchase">Purchase</string>
    <string name="title_activity_bill">Bill Payment</string>
    <string name="title_activity_tran">Transfer</string>
    <string name="title_activity_e_government">E-Government</string>
    <string name="title_activity_higher_edu">Higher Education</string>
    <string name="title_activity_higher_edu_arab">Higher Education Arab</string>
    <string name="title_activity_voucher">Generate Voucher</string>
    <string name="prompt_phone">Mobile Number</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_request_code">Request Code</string>
    <string name="action_reset">Reset</string>
    <string name="action_pay">Pay</string>
    <string name="action_print">Print</string>
    <string name="action_finish">Finish</string>
    <string name="action_back">Back</string>
    <string name="action_start">Start</string>
    <string name="action_get">Get</string>
    <string name="action_transfer">Transfer</string>
    <string name="action_generate">Generate</string>
    <string name="action_scan">Scan</string>
    <string name="action_sign_up">register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_card">This card is invalid</string>
    <string name="error_invalid_mobile_number">This mobile number is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_forgot_password">Forgot Password</string>
    <string name="title_activity_electricity">Electricity</string>
    <string-array name="operators">
        <item>Zain</item>
        <item>Sudani</item>
        <item>MTN</item>
        <item>Canar</item>
    </string-array>
    <string-array name="cards">
        <item>Motaz - 1234561234512345</item>
        <item>AlaaJ - 1234561234512345</item>
        <item>Monir - 1234561234512345</item>
        <item>Mosab - 1234561234512345</item>
    </string-array>
    <string-array name="expMonth">
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="expYear">
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
        <item>2024</item>
        <item>2025</item>
        <item>2026</item>
        <item>2027</item>
        <item>2028</item>
        <item>2029</item>
        <item>2030</item>
        <item>2031</item>
        <item>2032</item>
        <item>2033</item>
        <item>2034</item>
        <item>2035</item>
        <item>2036</item>
        <item>2037</item>
        <item>2038</item>
        <item>2039</item>
        <item>2040</item>
        <item>2041</item>
        <item>2042</item>
        <item>2043</item>
        <item>2044</item>
        <item>2045</item>
        <item>2046</item>
        <item>2047</item>
        <item>2048</item>
        <item>2049</item>
        <item>2050</item>
    </string-array>
    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="scan_barcode_button">Scan barcode</string>
    <string name="no_barcode_captured">No barcode captured</string>
    <string name="barcode_error_format">"Error reading barcode: %1$s"</string>
    <string name="ok">OK</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="card_name"> Card Name</string>
    <string name="pan"> Card Number  </string>
    <string name="expiryDate">Expiry Date </string>
    <string name="year"> Year  </string>
    <string name="month">  Month  </string>
    <string name="asDefault">  Set As Default  </string>
    <string name="action_add">  Add  </string>
    <string name="share">  Share  </string>
    <string name="help">  Help  </string>
    <string name="info">  About    </string>
    <string name="logout">    Logout    </string>
    <string name="communicate">  Other  </string>
    <string name="select_card">  Select Card  </string>
    <string name="select_card_from">  Select Card (From) </string>
    <string name="select_card_to">   Select Card (To) </string>
    <string name="select"> Select </string>
    <string name="password">"PIN "</string>
    <string name="password_sys">  Password  </string>
    <string name="select_operator">   Select Operator   </string>
    <string name="activity_bill">Bills </string>
    <string name="amount">Amount </string>
    <string name="add_card">  Add Card </string>
    <string name="password_old">  Old iPin </string>
    <string name="password_new">New iPin  </string>
    <string name="password_new_confirm">Confirm New iPin  </string>
    <string name="password_old_sys">Old Password </string>
    <string name="password_new_sys">New Password </string>
    <string name="password_new_confirm_sys">Confirm New Password </string>
    <string name="password_confirm">Confirm Password  </string>
    <string name="action_change">  Change </string>
    <string name="meter_no">  Meter No </string>
    <string name="student_name">Student Name</string>
    <string name="dont_have_account">Do not have an account?  </string>
    <string name="forgot_password"> Forgot Password? </string>
    <string name="already_have_otp"> Already have an OPT Code?</string>
    <string name="opt_code_didnt_received">OPT Code did not received </string>
    <string name="action_send">Send  </string>
    <string name="name">Name   </string>
    <string name="address">Address  </string>
    <string name="email"> Email (Optional)  </string>
    <string name="action_create_account"> Create an account </string>
    <string name="unknown_error"> Error, try later. </string>
    <string name="alread_have_account_login"> Already have an account? login</string>
    <string name="action_suspend_card">Suspend </string>
    <string name="generate_voucher">    Generate voucher</string>
    <string name="action_remove"> Delete</string>
    <string name="bill_no">   Invoice Number</string>
    <string name="student_course"> Course  </string>
    <string name="student_form_kind">   Form Kind  </string>
    <string name="student_seat_number">   Seat Number    </string>
    <string name="error_empty_filed">    Please enter this field</string>
    <string name="error_pass_no_equals">New and Confirmed iPins mismatched </string>
    <string name="title_activity_custom_info"> Customs Bill Info </string>
    <string name="title_activity_custom_pay">Custom Bill Payment </string>
    <string name="title_activity_e15_info"> E15 Bill Info </string>
    <string name="title_activity_about"> About </string>
    <string name="successful"> Successful  </string>
    <string name="failed"> Failed  </string>
    <string name="bill_info"> Bill Info  </string>
    <string name="billedAmount"> Billed Amount  </string>
    <string name="totalAmount"> Total Amount  </string>
    <string name="unbilledAmount"> Un billed Amount  </string>
    <string name="last4Digits"> Last 4 Digits  </string>
    <string name="contractNumber"> Contract Number </string>
    <string name="lastInvoiceDate"> Last Invoice Date  </string>
    <string name="total"> Total  </string>
    <string name="SubscriberID"> Subscriber ID </string>
    <string name="billAmount"> Bill Amount  </string>
    <string name="BillAmount"> Bill Amount  </string>
    <string name="InvoiceStatus"> Invoice Status  </string>
    <string name="CANCELED"> CANCELED </string>
    <string name="PENDING"> PENDING  </string>
    <string name="PAID"> PAID  </string>
    <string name="PayerName"> Payer Name  </string>
    <string name="UnitName"> Unit Name  </string>
    <string name="ServiceNumber"> Service Number  </string>
    <string name="TotalAmount"> Total Amount  </string>
    <string name="DueAmount"> Due Amount  </string>
    <string name="InvoiceExpiry"> Invoice Expiry </string>
    <string name="ServiceName"> Service Name  </string>
    <string name="success_ipin_changes"> iPIN has been changed successfully </string>
    <string name="available_balance_is"> Available Card Balance is </string>
    <string name="sdg">  SDG  </string>
    <string name="voucher_code">  Voucher Code  </string>
    <string name="fee">   Fee  </string>
    <string name="fee_issuer">   Issuer Transaction Fee  </string>
    <string name="formNo">   Form No  </string>
    <string name="receiptNo">   Receipt No   </string>
    <string name="no_amount"> Amount is not exist   </string>
    <string name="opertorMessage">Operator Message</string>
    <string name="unitsInKWh">Units In KWh  </string>
    <string name="meterNumber">Meter Number  </string>
    <string name="accountNo">Account No  </string>
    <string name="meterFees">Meter Fees  </string>
    <string name="netAmount">Net Amount  </string>
    <string name="waterFees">Water Fees  </string>
    <string name="customerName">Customer Name  </string>
    <string name="token"> Token  </string>
    <string name="subNewBalance"> Sub New Balance  </string>
    <string name="reported_successfully"> Reported successfully  </string>
    <string name="enter_a_valid_card"> Enter a valid PAN</string>
    <string name="ReferenceId">  Reference Id  </string>
    <string name="BankCode">  Bank Code  </string>
    <string name="E15ReceiptNumber"> E-15 ReceiptNumber </string>
    <string name="decName"> E-15 ReceiptNumber </string>
    <string name="declarantNumber"> E-15 ReceiptNumber </string>
</resources>