<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="sd.code.morsalpos.AddCardActivity"
    android:background="@color/white"
    android:focusableInTouchMode="true"

    >

    <!-- Login progress -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"

                >

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="72dp"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/logo" />

                <!-- Name Label -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <EditText
                        android:id="@+id/card_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/card_name"
                        android:inputType="textPersonName" />
                </android.support.design.widget.TextInputLayout>


                <!-- mobile number -->
                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <EditText
                        android:id="@+id/pan"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/pan"
                        android:inputType="number" />
                </android.support.design.widget.TextInputLayout>

                <!-- mobile number -->


                <TextView
                    android:id="@+id/eee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="10dp"
                    android:inputType="number"
                    android:text="@string/expiryDate"


                    />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="15dp"
                    android:layout_marginRight="15dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/dd"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.1"
                        android:gravity="center"
                        android:layout_marginTop="5dp"
                        android:inputType="number"
                        android:text="@string/year" />



                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/year"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="0.9"
                        android:entries="@array/expYear"
                        android:prompt="@string/select"
                         />



                    <TextView
                        android:id="@+id/ff"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1.1"
                        android:gravity="center"
                        android:layout_marginTop="5dp"
                        android:inputType="number"
                        android:text="@string/month" />

                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/month"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:layout_weight="1"
                        android:entries="@array/expMonth"
                        android:prompt="@string/select"
                         />


                </LinearLayout>

                <CheckBox
                    android:id="@+id/asDefault"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:checked="true"
                    android:text="@string/asDefault" />

                <Button
                    android:id="@+id/btn_add_card"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_selector_yellow"
                    android:text="@string/action_add"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

</LinearLayout>
