<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="sd.code.morsalpos.ChangeiPinActivity"
    android:background="@color/white"
    android:focusableInTouchMode="true"

    >

    <!-- Login progress -->
    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:orientation="vertical"
            >

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="vertical"

                >

                <ImageView android:src="@drawable/logo"
                    android:layout_width="wrap_content"
                    android:layout_height="72dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="center_horizontal" />

                <TextView
                    android:id="@+id/txt_result"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:background="@color/blue"
                    android:padding="10dp"
                    android:text="..."
                    android:textColor="@color/white"
                    android:textSize="16dip"

                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:text="@string/select_card"
                        android:textColor="@color/colorPrimaryDark" />


                    <android.support.v7.widget.AppCompatSpinner
                        android:id="@+id/cards"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_marginTop="5dp"
                        android:background="@drawable/spenner_selector" />
                </LinearLayout>

                <!-- Name Label -->

                    <EditText android:id="@+id/iPin"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberPassword"
                        android:layout_margin="10dp"
                        android:maxLength="4"
                        android:hint="@string/password_old" />


                <!-- Name Label -->

                    <EditText android:id="@+id/newIPIN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberPassword"
                        android:layout_margin="10dp"
                        android:maxLength="4"
                        android:hint="@string/password_new" />


                <!-- Name Label -->

                    <EditText android:id="@+id/cNewIPIN"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberPassword"
                        android:layout_margin="10dp"
                        android:maxLength="4"
                        android:hint="@string/password_new_confirm" />


                <Button
                    android:id="@+id/btn_change"
                    style="?android:textAppearanceSmall"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_selector_yellow"
                    android:text="@string/action_change"
                    android:textColor="@color/white"
                    android:textStyle="bold" />

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />

</LinearLayout>
